--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ button {
 
 body {
     font-family: 'Roboto', sans-serif;
-    color: #2E2F42;
+    color: #434455;
     background-color: #FFFF;
 }
 
@@ -25,7 +25,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
+    line-height: 1.17;
     /* 116.667% */
     letter-spacing: 0.54px;
     text-transform: uppercase;
@@ -36,7 +36,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
+    line-height: 1.17;
     /* 116.667% */
     letter-spacing: 0.54px;
     text-transform: uppercase;
@@ -56,10 +56,13 @@ body {
     color: var(--accent-color);
 }
 
+.address-list {
+    font-style: normal;
+}
+
 .contact-list-link {
     color: #434455;
     font-size: 16px;
-    font-style: normal;
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.32px;
@@ -88,6 +91,10 @@ body {
     border-radius: 4px;
     background: #4D5AE5;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff
 }
 
 .button-order-service:hover,
@@ -202,7 +209,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
     font-weight: 700;
-    line-height: 1.16;
+    line-height: 1.17;
     /* 116.667% */
     letter-spacing: 0.54px;
     text-transform: uppercase;
